<resources>
    <string name="app_name">latest_point</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Latest Point</string>
    <string name="nav_header_subtitle">ibrahim-akin@msn.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_kitap">Kitap</string>
    <string name="menu_video">Video</string>
    <string name="menu_basvuru">Etkinlik</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="isim">İsim : </string>
    <string name="sayfa">Sayfa : </string>
    <string name="kacinci">Kaçıncı : </string>
    <string name="dakika">Dakika : </string>
    <string name="basvuru">Başvuru : </string>
    <string name="son">Son Başvuru : </string>
    <string name="sonuc">Sonuç : </string>
    <string name="link">Link : </string>
    <string name="baslangic">Başlangıç : </string>
    <string name="degisim">Değişim : </string>

</resources>
