<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iAKIN.latest_point.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_kitap"
        android:name="com.iAKIN.latest_point.ui.kitap.KitapFragment"
        android:label="@string/menu_kitap"
        tools:layout="@layout/fragment_kitap" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.iAKIN.latest_point.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_basvuru"
        android:name="com.iAKIN.latest_point.ui.basvuru.BasvuruFragment"
        android:label="@string/menu_basvuru"
        tools:layout="@layout/fragment_basvuru" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.iAKIN.latest_point.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.iAKIN.latest_point.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>