<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin"
            android:padding="@dimen/form_margin"
            android:columnCount="2"
            android:rowCount="9">

            <TextView
                android:id="@+id/bvIsim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/isim" />

            <TextView
                android:id="@+id/bvIsim_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="Deneme" />

            <TextView
                android:id="@+id/bvBasvuru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/basvuru" />

            <TextView
                android:id="@+id/bvBasvuru_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="5" />

            <TextView
                android:id="@+id/bvSon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/son" />

            <TextView
                android:id="@+id/bvSon_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="32" />

            <TextView
                android:id="@+id/bvSonuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/sonuc" />

            <TextView
                android:id="@+id/bvSonuc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="32" />

            <TextView
                android:id="@+id/bvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/link" />

            <TextView
                android:id="@+id/bvLink_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="www" />

            <TextView
                android:id="@+id/bvBaslangic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/baslangic" />

            <TextView
                android:id="@+id/bvBaslangic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="Tarih" />

            <TextView
                android:id="@+id/bvDegisim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="@string/degisim" />

            <TextView
                android:id="@+id/bvDegisim_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:text="Tarih" />

            <Button
                android:id="@+id/btnSil"
                android:layout_column="1"
                android:text="Sil" />
        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>