<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                        <Button
                            android:id="@+id/btnKitap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_kitap"
                            android:height="@dimen/home_buttons"/>

                        <Button
                            android:id="@+id/btnVideo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_video"
                            android:height="@dimen/home_buttons"/>

                        <Button
                            android:id="@+id/btnBasvuru"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_basvuru"
                            android:height="@dimen/home_buttons"/>
                </LinearLayout>
        </ScrollView>

</LinearLayout>