<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin"
            android:padding="@dimen/form_margin"
            android:columnCount="2"
            android:rowCount="9">

            <TextView
                android:id="@+id/ktpIsim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isim"
                android:layout_margin="@dimen/form_margin"
                 />
            <TextView
                android:id="@+id/ktpIsim_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deneme"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpSayfa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sayfa"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpSayfa_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="32"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:layout_column="0"
                />
            <TextView
                android:id="@+id/ktpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:layout_margin="@dimen/form_margin"
                android:layout_column="0"
                />
            <TextView
                android:id="@+id/ktpLink_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpBaslangic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baslangic"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpBaslangic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarih"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpDegisim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degisim"
                android:layout_margin="@dimen/form_margin"
                />
            <TextView
                android:id="@+id/ktpDegisim_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tarih"
                android:layout_margin="@dimen/form_margin"
                />
            <Button
                android:id="@+id/btnSil"
                android:text="Sil"
                android:layout_column="1"/>
        </GridLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>